--- a/src/main/resources/com/zy/card/fight-view.fxml
+++ b/src/main/resources/com/zy/card/fight-view.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.text.*?>
 <?import javafx.scene.image.*?>
 <?import java.lang.*?>
 <?import java.util.*?>
@@ -9,7 +10,7 @@
 
 <AnchorPane fx:id="FightMainBack" prefHeight="540.0" prefWidth="960.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.zy.card.FightViewController">
    <children>
-      <ImageView fx:id="FightBackground" fitHeight="546.0" fitWidth="970.0" layoutX="-7.0" layoutY="-2.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="FightBackground" fitHeight="546.0" fitWidth="970.0" layoutX="-14.0" layoutY="-1.0" pickOnBounds="true" preserveRatio="true" />
       <AnchorPane fx:id="Infobar" layoutY="-2.0" prefHeight="40.0" prefWidth="970.0">
          <children>
             <ImageView fx:id="Bloodgauge" fitHeight="40.0" fitWidth="200.0" layoutX="64.0" layoutY="-5.0" pickOnBounds="true" preserveRatio="true" />
@@ -18,16 +19,23 @@
             <Button fx:id="ButtonMap" layoutX="760.0" layoutY="-4.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="35.0" />
          </children>
       </AnchorPane>
-      <AnchorPane fx:id="Coin_Pane" layoutX="291.0" layoutY="-1.0" prefHeight="30.0" prefWidth="80.0">
+      <AnchorPane fx:id="Coin_Pane" layoutX="263.0" layoutY="-1.0" prefHeight="30.0" prefWidth="80.0">
          <children>
             <ImageView fx:id="Coin" fitHeight="20.0" fitWidth="20.0" layoutX="8.0" layoutY="4.0" pickOnBounds="true" preserveRatio="true" />
             <Label fx:id="NumberofCoin" layoutX="25.0" layoutY="7.0" text="114514" textFill="WHITE" AnchorPane.rightAnchor="12.0" />
-         </children>
-      </AnchorPane>
+         </children></AnchorPane>
       <ImageView fx:id="SmallHero" fitHeight="60.0" fitWidth="60.0" layoutX="1.0" layoutY="-2.0" pickOnBounds="true" preserveRatio="true" />
-      <ImageView fx:id="SkillPointsGauge" fitHeight="84.0" fitWidth="80.0" layoutX="61.0" layoutY="356.0" pickOnBounds="true" preserveRatio="true" />
       <Button fx:id="ButtonNextStep" layoutX="825.0" layoutY="378.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="100.0" />
       <Button fx:id="CardToBeGet" layoutX="11.0" layoutY="472.0" mnemonicParsing="false" prefHeight="60.0" prefWidth="60.0" />
       <Button fx:id="CardDeserted" layoutX="872.0" layoutY="469.0" mnemonicParsing="false" prefHeight="60.0" prefWidth="60.0" />
+      <Button fx:id="ButtonAction" layoutX="825.0" layoutY="330.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="100.0" />
+      <AnchorPane fx:id="SkillPointsGauge" layoutX="23.0" layoutY="386.0" prefHeight="70.0" prefWidth="70.0">
+         <children>
+            <Label fx:id="ActionPoint" alignment="CENTER" layoutX="16.0" layoutY="25.0" text="Label" textAlignment="CENTER">
+               <font>
+                  <Font size="20.0" />
+               </font>
+            </Label>
+         </children></AnchorPane>
    </children>
 </AnchorPane>
