--- a/src/main/resources/com/zy/card/events-view.fxml
+++ b/src/main/resources/com/zy/card/events-view.fxml
@@ -19,7 +19,7 @@
                   <Font size="25.0" />
                </font>
             </Label>
-            <Label fx:id="NameofEvent" layoutX="303.0" layoutY="78.0" text="事件名" textFill="#b21e1e">
+            <Label fx:id="NameofEvent" layoutX="303.0" layoutY="78.0" text="奥恩神器" textFill="#b21e1e">
                <font>
                   <Font size="20.0" />
                </font>
