--- a/src/main/resources/com/zy/card/herochoose-view.fxml
+++ b/src/main/resources/com/zy/card/herochoose-view.fxml
@@ -1,16 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.text.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.shape.*?>
-<?import javafx.scene.chart.*?>
 <?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="540.0" prefWidth="960.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.zy.card.HeroChooseController">
+<AnchorPane fx:id="HeroPane" prefHeight="540.0" prefWidth="960.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.zy.card.HeroChooseController">
    <children>
       <ImageView fx:id="HeroChooseBackGround" fitHeight="546.0" fitWidth="970.0" pickOnBounds="true" preserveRatio="true" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" />
       <ImageView fx:id="HeroChooseBG" fitHeight="390.0" fitWidth="295.0" layoutX="35.0" layoutY="50.0" pickOnBounds="true" preserveRatio="true" />
@@ -18,14 +14,12 @@
       <ImageView fx:id="IntroductionBG" fitHeight="425.0" fitWidth="330.0" layoutX="621.0" layoutY="33.0" pickOnBounds="true" preserveRatio="true" />
       <ImageView fx:id="ReturnImage" fitHeight="43.0" fitWidth="125.0" layoutX="35.0" layoutY="470.0" pickOnBounds="true" preserveRatio="true" />
       <ImageView fx:id="ConfirmImage" fitHeight="43.0" fitWidth="125.0" layoutX="810.0" layoutY="470.0" pickOnBounds="true" preserveRatio="true" />
-      <ImageView fx:id="HeroDeplay" fitHeight="300.0" fitWidth="350.0" layoutX="290.0" layoutY="123.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fx:id="HeroDeplay" fitHeight="300.0" fitWidth="350.0" layoutX="265.0" layoutY="132.0" pickOnBounds="true" preserveRatio="true" />
       <ImageView fx:id="Hero1" fitHeight="70.0" fitWidth="70.0" layoutX="86.0" layoutY="165.0" pickOnBounds="true" preserveRatio="true" />
       <ImageView fx:id="Hero2" fitHeight="92.0" fitWidth="83.0" layoutX="211.0" layoutY="156.0" pickOnBounds="true" preserveRatio="true" />
       <ImageView fx:id="Hero3" fitHeight="97.0" fitWidth="85.0" layoutX="86.0" layoutY="289.0" pickOnBounds="true" preserveRatio="true" />
       <ImageView fx:id="Hero4" fitHeight="100.0" fitWidth="85.0" layoutX="208.0" layoutY="289.0" pickOnBounds="true" preserveRatio="true" />
       <Text fx:id="SkillIntroduction" layoutX="733.0" layoutY="399.0" strokeType="OUTSIDE" strokeWidth="0.0" text="技能特性描述" />
-      <Button fx:id="HeroChooseReturn" graphicTextGap="0.0" layoutX="48.0" layoutY="469.0" mnemonicParsing="false" prefHeight="45.0" prefWidth="125.0" AnchorPane.leftAnchor="35.0" AnchorPane.topAnchor="469.0" />
-      <Button fx:id="HeroChooseConfirm" layoutX="794.0" layoutY="469.0" mnemonicParsing="false" prefHeight="45.0" prefWidth="125.0" AnchorPane.rightAnchor="35.0" AnchorPane.topAnchor="469.0" />
       <Button fx:id="HeroChoosebtn1" layoutX="81.0" layoutY="164.0" mnemonicParsing="false" prefHeight="70.0" prefWidth="70.0" />
       <Button fx:id="HeroChoosebtn4" layoutX="201.0" layoutY="274.0" mnemonicParsing="false" prefHeight="100.0" prefWidth="85.0" />
       <Button fx:id="HeroChoosebtn3" layoutX="74.0" layoutY="276.0" mnemonicParsing="false" prefHeight="97.0" prefWidth="85.0" />
